# demo-x11-2

./: .gitignore  CMakeLists.txt  README.md  main.c
client/: client.c  client.h  client_hooks.c  client_hooks.h
components/: xf_monitor.c  xf_monitor.h  xf_utils.c  xf_utils.h  xf_window.c  xf_window.h
context/: client_context.h
devlogs/: 2025-jun-25.md  init.md
errors/: error.c  error.h
